--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -3,7 +3,7 @@
     <nav>
       <mat-toolbar>
         <div>
-          <mat-icon *ngIf="showIcon" color="white" (click)="moveToBackPage()">arrow_back</mat-icon>
+          <mat-icon *ngIf="showIcon" class="back-icon" (click)="moveToBackPage()">arrow_back</mat-icon>
           <span class="title">Planets</span>
         </div>
         <input class="search-text" *ngIf="!showIcon" type="search" placeholder="Search" (search)="search($event.target.value)">
